--- a/index.html
+++ b/index.html
@@ -1,54 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOMIAH</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Nomiah | Innovation Rooted in Africa</title>
+
+    <meta name="description"
+          content="Nomiah is a South African technology company providing web development, digital marketing, and innovative software solutions for modern businesses." />
+
+    <meta name="keywords"
+          content="Nomiah, web development South Africa, digital solutions, African tech company, business websites, software services" />
+
+    <meta name="author" content="Nomiah" />
+
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="google86c57b7ff9d8a932.html" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
+    <!-- Accessibility -->
+    <a class="skip-link" href="#main">Skip to content</a>
+
+    <!-- HEADER / NAVBAR -->
     <header class="navbar">
-        <div class="logo">NOMIAH</div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <div class="nav-container">
+            <div class="logo">NOMIAH</div>
+
+            <nav aria-label="Main navigation">
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact" class="nav-cta">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section class="hero">
-        <h1>Innovation Rooted in Africa</h1>
-        <p>We build digital solutions that solve real business problems.</p>
-        <button>Get Started</button>
-    </section>
+    <!-- MAIN CONTENT -->
+    <main id="main">
 
-    <section class="about">
-        <h2>Who We Are</h2>
-        <p>
-            NOMIAH is a technology-driven company focused on web development,
-            digital solutions, and innovation designed for real-world impact.
-        </p>
-    </section>
+        <!-- HERO -->
+        <section class="hero" id="home">
+            <h1>Innovation Rooted in Africa</h1>
+            <p>
+                We design and build digital solutions that solve real business problems
+                and help organisations grow with confidence.
+            </p>
+            <a class="btn" href="#contact">Get Started</a>
+        </section>
 
-    <section class="contact" id="contact">
-        <h2>Contact Us</h2>
-        <p>
-            Email us at:
-            <a href="mailto:kagisoblessing2005@gmail.com">
-                kagisoblessing2005@gmail.com
-            </a>
-        </p>
-    </section>
+        <!-- ABOUT -->
+        <section class="about" id="about">
+            <h2>Who We Are</h2>
+            <p>
+                Nomiah is a technology-driven company focused on web development,
+                digital platforms, and innovative solutions tailored for African
+                and global businesses.
+            </p>
+        </section>
 
+        <!-- SERVICES -->
+        <section class="services" id="services">
+            <h2>What We Do</h2>
+            <ul class="services-list">
+                <li>Website Design & Development</li>
+                <li>Web Applications</li>
+                <li>Digital Marketing & Online Presence</li>
+                <li>Lead Generation Solutions</li>
+            </ul>
+        </section>
+
+        <!-- CONTACT -->
+        <section class="contact" id="contact">
+            <h2>Contact Us</h2>
+            <p>
+                Email us at:
+                <a href="mailto:kagisoblessing2005@gmail.com">
+                    kagisoblessing2005@gmail.com
+                </a>
+            </p>
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
     <footer class="footer">
-        <p>© 2025 NOMIAH. All rights reserved.</p>
+        <p>© 2025 Nomiah. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+
 </body>
 </html>
