Add About page with vision, mission, and values

--- a/about.html
+++ b/about.html
@@ -1,84 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | NOMIAH</title>
 
-    <title>About Nomiah | Innovation Rooted in Africa</title>
+    <meta name="description" content="About NOMIAH — an African-first technology company solving real business problems through innovation, digital systems, and scalable solutions.">
 
-    <meta name="description"
-          content="Learn about Nomiah — an African-first technology company building digital solutions with global ambition." />
-
-    <meta name="author" content="Nomiah" />
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <a class="skip-link" href="#main">Skip to content</a>
-
-    <!-- HEADER -->
+    <!-- Header / Navigation -->
     <header class="navbar">
-        <div class="nav-container">
-            <div class="logo">NOMIAH</div>
-
-            <nav aria-label="Main navigation">
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="nav-cta">About</a></li>
-                    <li><a href="index.html#services">Services</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div class="logo">NOMIAH</div>
+        <nav aria-label="Main navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" aria-current="page">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- MAIN -->
     <main id="main">
 
-        <section>
-            <h1>About Nomiah</h1>
+        <!-- Page Intro -->
+        <section class="page-hero">
+            <h1>About NOMIAH</h1>
             <p>
-                Nomiah is a technology company rooted in Africa and built for a global future.
-                We design and deliver digital solutions that solve real business problems,
-                empower organisations, and support sustainable growth.
+                Innovation Rooted in Africa.
             </p>
         </section>
 
-        <section>
+        <!-- Company Overview -->
+        <section class="about-section">
+            <h2>Who We Are</h2>
+            <p>
+                NOMIAH is an African-first technology company focused on solving
+                real-world business and operational challenges through digital
+                systems, web technologies, and innovation-driven solutions.
+            </p>
+            <p>
+                We work with corporates, organizations, and institutions that
+                require practical, scalable, and future-ready technology —
+                not trends, noise, or unnecessary complexity.
+            </p>
+        </section>
+
+        <!-- Vision -->
+        <section class="about-section">
             <h2>Our Vision</h2>
             <p>
-                To become a globally respected African technology company that drives innovation,
-                economic growth, and meaningful impact through intelligent digital solutions.
+                To become a globally respected technology company emerging from Africa,
+                delivering solutions that drive economic growth, operational efficiency,
+                and long-term value.
             </p>
         </section>
 
-        <section>
+        <!-- Mission -->
+        <section class="about-section">
             <h2>Our Mission</h2>
             <p>
-                To help businesses, organisations, and communities succeed by delivering reliable,
-                well-designed, and future-ready technology — from web platforms to digital growth systems.
+                Our mission is to design and deliver technology solutions that
+                solve real problems, empower businesses, and support sustainable
+                development across Africa and beyond.
             </p>
         </section>
 
-        <section>
+        <!-- Values -->
+        <section class="about-section">
             <h2>Our Values</h2>
-            <ul class="services-list">
-                <li><strong>Innovation with Purpose</strong> — Technology that solves real problems</li>
-                <li><strong>African-Rooted, Global-Minded</strong> — Built in Africa, ready for the world</li>
-                <li><strong>Clarity and Simplicity</strong> — Clean thinking, clean execution</li>
-                <li><strong>Integrity and Ownership</strong> — Responsibility in every decision</li>
-                <li><strong>Long-Term Thinking</strong> — Sustainable growth and partnerships</li>
-            </ul>
-        </section>
+            <ul class="values-list">
+                <li><strong>Integrity:</strong> We operate with honesty, clarity, and accountability.</li>
+                <li><strong>Problem-Solving:</strong> Technology exists to solve problems, not create them.</li>
+                <li><strong>Excellence:</strong> We pursue quality, reliability, and professionalism in everything we build.</li>
+                <li><strong>Innovation:</strong> We design solutions rooted in context, n
 
-    </main>
-
-    <footer class="footer">
-        <p>© 2025 Nomiah. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
+                    
