--- a/index.html
+++ b/index.html
@@ -1,102 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NOMIAH | Innovation Rooted in Africa</title>
 
-    <title>Nomiah | Innovation Rooted in Africa</title>
+    <meta name="description" content="NOMIAH is an African-first technology company delivering web development, digital systems, and problem-solving solutions for real business environments.">
 
-    <meta name="description"
-          content="Nomiah is a South African technology company providing web development, digital marketing, and innovative software solutions for modern businesses." />
-
-    <meta name="keywords"
-          content="Nomiah, web development South Africa, digital solutions, African tech company, business websites, software services" />
-
-    <meta name="author" content="Nomiah" />
-
-    <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="google86c57b7ff9d8a932.html" />
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <!-- Accessibility -->
-    <a class="skip-link" href="#main">Skip to content</a>
-
-    <!-- HEADER / NAVBAR -->
+    <!-- Header / Navigation -->
     <header class="navbar">
-        <div class="nav-container">
-            <div class="logo">NOMIAH</div>
-
-            <nav aria-label="Main navigation">
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact" class="nav-cta">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div class="logo">NOMIAH</div>
+        <nav aria-label="Main navigation">
+            <ul>
+                <li><a href="index.html" aria-current="page">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- MAIN CONTENT -->
     <main id="main">
 
-        <!-- HERO -->
-        <section class="hero" id="home">
+        <!-- Hero Section -->
+        <section class="hero">
             <h1>Innovation Rooted in Africa</h1>
             <p>
-                We design and build digital solutions that solve real business problems
-                and help organisations grow with confidence.
+                NOMIAH is a technology company focused on building practical,
+                scalable digital solutions that solve real business problems.
             </p>
-            <a class="btn" href="#contact">Get Started</a>
+            <div class="hero-actions">
+                <a href="services.html" class="btn">Explore Services</a>
+                <a href="contact.html" class="btn btn-outline">Contact Us</a>
+            </div>
         </section>
 
-        <!-- ABOUT -->
-        <section class="about" id="about">
-            <h2>Who We Are</h2>
-            <p>
-                Nomiah is a technology-driven company focused on web development,
-                digital platforms, and innovative solutions tailored for African
-                and global businesses.
-            </p>
-        </section>
-
-        <!-- SERVICES -->
-        <section class="services" id="services">
+        <!-- What We Do -->
+        <section class="home-section">
             <h2>What We Do</h2>
-            <ul class="services-list">
-                <li>Website Design & Development</li>
-                <li>Web Applications</li>
-                <li>Digital Marketing & Online Presence</li>
-                <li>Lead Generation Solutions</li>
+            <p>
+                We design and deliver technology solutions that support
+                operational efficiency, digital transformation, and sustainable growth.
+            </p>
+            <p>
+                Our work spans web development, custom systems, digital consulting,
+                and technology-driven marketing solutions.
+            </p>
+        </section>
+
+        <!-- Why NOMIAH -->
+        <section class="home-section">
+            <h2>Why NOMIAH</h2>
+            <ul class="why-list">
+                <li>✔ African-first perspective with global standards</li>
+                <li>✔ Practical solutions designed for real environments</li>
+                <li>✔ Focus on long-term value, not short-term trends</li>
+                <li>✔ Technology built to support growth and resilience</li>
             </ul>
         </section>
 
-        <!-- CONTACT -->
-        <section class="contact" id="contact">
-            <h2>Contact Us</h2>
-            <p>
-                Email us at:
-                <a href="mailto:kagisoblessing2005@gmail.com">
-                    kagisoblessing2005@gmail.com
-                </a>
+        <!-- Services Snapshot -->
+        <section class="home-section">
+            <h2>Core Services</h2>
+            <div class="services-preview">
+
+                <div class="service-preview">
+                    <h3>Web Development</h3>
+                    <p>
+                        Professional websites built for performance,
+                        clarity, and long-term maintainability.
+                    </p>
+                </div>
+
+                <div class="service-preview">
+                    <h3>Web Applications</h3>
+                    <p>
+                        Custom systems that streamline operations
+                        and support digital workflows.
+                    </p>
+                </div>
+
+                <div class="service-preview">
+                    <h3>Digital Consulting</h3>
+                    <p>
+                        Strategic guidance to help organizations
+                        adopt technology effectively.
+                    </p>
+                </div>
+
+                <div class="service-preview">
+                    <h3>Digital Marketing & Lead Generation</h3>
+                    <p>
+                        Technology-driven visibility and
+                        customer acquisition solutions.
+                    </p>
+                </div>
+
+            </div>
+
+            <p class="center-link">
+                <a href="services.html">View all services →</a>
             </p>
         </section>
 
-    </main>
-
-    <!-- FOOTER -->
-    <footer class="footer">
-        <p>© 2025 Nomiah. All rights reserved.</p>
-    </footer>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-
-</body>
-</html>
-<li><a href="about.html">About</a></li>
+        <!-- Call to Action -->
+        <section class="cta-section">
+            <h2>Let’s Build Something That Works</h2>
+            <p>
+                If you are looking for a technology partner that understands
+                real business challenges, NOMIAH is ready to engage.
+            </p>
