Finalize SEO-safe structure across all pages

--- a/about.html
+++ b/about.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | NOMIAH</title>
 
+    <!-- Primary SEO -->
     <meta name="description" content="About NOMIAH — an African-first technology company solving real business problems through innovation, digital systems, and scalable solutions.">
+    <meta name="author" content="NOMIAH">
+    <meta name="robots" content="index, follow">
 
+    <!-- Canonical -->
+    <link rel="canonical" href="https://blessing-005.github.io/nomiah/about.html">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -76,6 +83,31 @@
                 <li><strong>Integrity:</strong> We operate with honesty, clarity, and accountability.</li>
                 <li><strong>Problem-Solving:</strong> Technology exists to solve problems, not create them.</li>
                 <li><strong>Excellence:</strong> We pursue quality, reliability, and professionalism in everything we build.</li>
-                <li><strong>Innovation:</strong> We design solutions rooted in context, n
+                <li><strong>Innovation:</strong> We design solutions rooted in context, not imitation.</li>
+                <li><strong>African Excellence:</strong> We believe world-class companies can and should be built from Africa.</li>
+            </ul>
+        </section>
 
-                    
+        <!-- Positioning -->
+        <section class="about-section">
+            <h2>Our Positioning</h2>
+            <p>
+                NOMIAH is proudly African in origin and global in ambition.
+                We understand local realities while designing solutions that
+                meet international standards.
+            </p>
+            <p>
+                Our approach combines technical capability, strategic thinking,
+                and deep respect for the environments in which our clients operate.
+            </p>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <p>© 2025 NOMIAH. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
