--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | NOMIAH</title>
 
-    <meta name="description" content="Contact NOMIAH — get in touch with an African-first technology company delivering web and digital solutions for real business impact.">
+    <!-- Primary SEO -->
+    <meta name="description" content="Contact NOMIAH — an African-first technology company delivering web development, digital systems, and problem-solving solutions for real business impact.">
+    <meta name="author" content="NOMIAH">
+    <meta name="robots" content="index, follow">
 
+    <!-- Canonical -->
+    <link rel="canonical" href="https://blessing-005.github.io/nomiah/contact.html">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,19 +46,19 @@
             <h2>Get in Touch</h2>
 
             <p>
-                <strong>Email:</strong><br>
+                <strong>Email</strong><br>
                 <a href="mailto:kagisoblessing2005@gmail.com">
                     kagisoblessing2005@gmail.com
                 </a>
             </p>
 
             <p>
-                <strong>Phone / WhatsApp:</strong><br>
+                <strong>Phone / WhatsApp</strong><br>
                 <a href="tel:+27679433002">+27 67 943 3002</a>
             </p>
 
             <p class="contact-note">
-                *Official company contact details will be updated as NOMIAH expands.
+                *Official corporate contact details will be updated as NOMIAH expands.
             </p>
         </section>
 
@@ -59,7 +66,7 @@
         <section class="contact-section">
             <h2>Send an Inquiry</h2>
 
-            <form class="contact-form">
+            <form class="contact-form" aria-disabled="true">
                 <label>
                     Full Name
                     <input type="text" placeholder="Your full name" disabled>
@@ -89,11 +96,11 @@
         <section class="contact-section">
             <h2>Our Location</h2>
             <p>
-                NOMIAH operates within South Africa. A detailed office location
-                and interactive map will be provided once finalized.
+                NOMIAH currently operates within South Africa.
+                A confirmed office location and interactive map will be published once finalized.
             </p>
 
-            <div class="map-placeholder">
+            <div class="map-placeholder" aria-hidden="true">
                 <p>Map placeholder</p>
             </div>
         </section>
@@ -102,9 +109,9 @@
         <section class="contact-section">
             <h2>Connect With Us</h2>
             <ul class="social-links">
-                <li><span>LinkedIn (coming soon)</span></li>
-                <li><span>Facebook (coming soon)</span></li>
-                <li><span>WhatsApp Business (coming soon)</span></li>
+                <li><span>LinkedIn — coming soon</span></li>
+                <li><span>Facebook — coming soon</span></li>
+                <li><span>WhatsApp Business — coming soon</span></li>
             </ul>
         </section>
 
@@ -117,4 +124,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
