--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOMIAH | Innovation Rooted in Africa</title>
 
+    <!-- Primary SEO -->
     <meta name="description" content="NOMIAH is an African-first technology company delivering web development, digital systems, and problem-solving solutions for real business environments.">
+    <meta name="author" content="NOMIAH">
+    <meta name="robots" content="index, follow">
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://blessing-005.github.io/nomiah/">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
