--- a/services.html
+++ b/services.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services | NOMIAH</title>
 
-    <meta name="description" content="NOMIAH services — web development, digital solutions, and technology-driven problem solving for African and global businesses.">
+    <!-- Primary SEO -->
+    <meta name="description" content="NOMIAH services — web development, digital systems, consulting, and technology-driven problem solving for African and global businesses.">
+    <meta name="author" content="NOMIAH">
+    <meta name="robots" content="index, follow">
 
+    <!-- Canonical -->
+    <link rel="canonical" href="https://blessing-005.github.io/nomiah/services.html">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,10 +43,11 @@
         </section>
 
         <!-- Services List -->
-        <section class="services-list">
+        <section class="services-list" aria-labelledby="services-overview">
+            <h2 id="services-overview" class="visually-hidden">Service Overview</h2>
 
             <article class="service-card">
-                <h2>Web Development</h2>
+                <h3>Web Development</h3>
                 <p>
                     We design and build professional, high-performance websites
                     tailored to business goals, brand identity, and long-term growth.
@@ -48,7 +56,7 @@
             </article>
 
             <article class="service-card">
-                <h2>Web Applications</h2>
+                <h3>Web Applications</h3>
                 <p>
                     Custom web-based systems and applications that improve efficiency,
                     automate processes, and support business operations.
@@ -57,7 +65,7 @@
             </article>
 
             <article class="service-card">
-                <h2>Digital & Technology Consulting</h2>
+                <h3>Digital & Technology Consulting</h3>
                 <p>
                     Strategic guidance to help businesses adopt the right technology,
                     improve digital workflows, and scale sustainably.
@@ -66,7 +74,7 @@
             </article>
 
             <article class="service-card">
-                <h2>Digital Marketing & Lead Generation</h2>
+                <h3>Digital Marketing & Lead Generation</h3>
                 <p>
                     Technology-driven marketing solutions focused on visibility,
                     lead acquisition, and measurable business outcomes.
@@ -86,8 +94,8 @@
                     SMEs, NGOs, and organizations operating in demanding environments.
                 </p>
                 <p>
-                    Our approach focuses on performance, usability, and long-term maintainability,
-                    ensuring your website remains an asset—not a liability.
+                    Our approach prioritizes performance, usability, accessibility,
+                    and long-term maintainability.
                 </p>
             </div>
 
@@ -109,7 +117,8 @@
                     where technology can deliver measurable impact.
                 </p>
                 <p>
-                    We advise on system design, digital strategy, and technology adoption.
+                    We advise on system architecture, digital strategy, and responsible
+                    technology adoption.
                 </p>
             </div>
 
@@ -135,4 +144,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
